# construction-site-safety

./: .gitignore  README.md  data.dvc  docker-compose.yml  dump.rdb  main.py  models.dvc  pyproject.toml  requirements.txt
api/: .Dockerignore  Dockerfile  config.py  main.py  models.py  requirements.txt  test.py
notebooks/: EDA_train_yolo.ipynb
redis/: Dockerfile
src/analysis/: depth_analysor.py  detection_pipeline.py  pose_analysor.py
src/detection/: pose_estimator.py  ppe_detector.py
src/inference/: danger_scoring.py  inference.py
src/utils/: CONSTANTS.py  custom_utils.py
