[project]
name = "construction-site-safety"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "mediapipe>=0.10.31",
    "mlflow>=3.8.1",
    "opencv-python>=4.13.0.90",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "ultralytics>=8.4.6",
]
